--- a/5_Site/Versione 2 (Con utenti specifici)/index.html
+++ b/5_Site/Versione 2 (Con utenti specifici)/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
 
+    <!-- Titolo della chat -->
     <h1>Chat in Tempo Reale</h1>
 
+    <!-- Bottone per il logout -->
     <div id="auth-container">
         <button id="logout-button">Esci</button>
     </div>
 
+    <!-- Mostra l'ID dell'utente attualmente autenticato -->
     <div id="current-user-container">
         <h2>Il tuo ID Utente</h2>
         <p id="current-user-id"></p>
     </div>
 
+    <!-- Sezione per iniziare nuove conversazioni -->
     <div id="conversations-container">
         <input type="email" id="email-to-chat" placeholder="Email dell'utente con cui chattare">
         <button id="start-chat-button">Inizia Chat</button>
@@ -26,12 +30,14 @@
         <input type="text" id="conversation-id" placeholder="ID della conversazione..." style="display: none;">
     </div>
     
+    <!-- Sezione della chat, nascosta finché non si seleziona una conversazione -->
     <div id="chat-container" style="display: none;">
         <div id="messages"></div>
         <input type="text" id="message-input" placeholder="Scrivi un messaggio...">
         <button id="send-button">Invia</button>
     </div>
 
+    <!-- Includi il file JavaScript per la logica della chat -->
     <script type="module" src="index.js"></script>
 
 </body>
