--- a/5_Site/index.html
+++ b/5_Site/index.html
@@ -8,16 +8,14 @@
 </head>
 <body>
 
-    <h1>Chat in Tempo Reale</h1>
-
-    <button id="logout-button">Esci</button>
+    <h3 id="benvenuto"></h3>
 
     <div id="contenitore">
         <div id="messaggi"></div>
+        <button id="logout"> </button>
         <input type="text" id="messaggio" placeholder="Scrivi un messaggio...">
-        <button id="invia" onclick="invia()">Invia</button>
+        <button id="invia" onclick="invia()">➜</button>
     </div>
-    <script type="module" src="index.js"></script>
 
     <script type="module" src="index.js"></script>
 
