--- a/5_Site/html/wait.html
+++ b/5_Site/html/wait.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conferma e-mail</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 <body>
 
@@ -19,5 +19,5 @@
     </center>
 
 </body>
-<script type="module" src="wait.js"></script>
+<script type="module" src="../js/wait.js"></script>
 </html>
