--- a/5_Site/html/auth.html
+++ b/5_Site/html/auth.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina di autenticazione</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 
 <body>
@@ -40,5 +40,5 @@
     </center>
 
 </body>
-<script type="module" src="auth.js"></script>
+<script type="module" src="../js/auth.js"></script>
 </html>
