--- a/5_Site/html/forgot.html
+++ b/5_Site/html/forgot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina di ripristino della password</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 <body>
 
@@ -24,5 +24,5 @@
     </center>
 
 </body>
-<script type="module" src="forgot.js"></script>
+<script type="module" src="../js/forgot.js"></script>
 </html>
