--- a/5_Site/html/index.html
+++ b/5_Site/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat in Tempo Reale</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../style/index.css">
 </head>
 <body>
 
@@ -14,10 +14,11 @@
         <div id="messaggi"></div>
         <button id="logout"> </button>
         <input type="text" id="messaggio" placeholder="Scrivi un messaggio...">
+        <button id="allegato">+</button>
         <button id="invia" onclick="invia()">➜</button>
     </div>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="../js/index.js"></script>
 
 </body>
 </html>
