--- a/5_Site/html/auth.html
+++ b/5_Site/html/auth.html
@@ -23,7 +23,7 @@
                 <h2>Oppure accedi con email e password</h2>
                 <input type="email" id="email" placeholder="Email" required/><br>
                 <input type="password" id="password" placeholder="Password" required/><br>
-                <p id="cambiaP">Password dimenticata?</p>
+                <p id="cambiaP" style="display: none;">Password dimenticata?</p>
 
                 <br><br>
 
