--- a/5_Site/html/index.html
+++ b/5_Site/html/index.html
@@ -28,12 +28,12 @@
 
         <!-- Esporta chat -->
         <select id="formato" name="formato">
-            <option value="-">-</option>
-            <option value="csv">CSV</option>
-            <option value="pdf">PDF</option>
-        </select>
+            <option>-</option>
+            <option value="csv" id="csv">CSV</option>
+            <option value="pdf" id="pdf">PDF</option>
+        </select>        
         
-        <button type="esporta">Esporta</button>
+        <button id="esporta">Esporta</button>
     </div>
 
     <script type="module" src="../js/index.js"></script>
